crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_branch_with_disabled_child_leaf.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&disabled.connect(&|_| {}).leaf_attrs(&key(2)))"
---
aria-disabled=true
aria-level=2
aria-posinset=1
aria-selected=false
aria-setsize=1
data-ars-disabled=true
data-ars-part=leaf
data-ars-scope=tree-view
id=tree-node-i-2
role=treeitem
