crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_drag_handle_default.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(dnd_props()).connect(&|_|\n{}).drag_handle_attrs(&key(2)))"
---
aria-label=Drag Apple
data-ars-part=drag-handle
data-ars-scope=tree-view
role=button
tabindex=0
