crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_drag_handle_grabbed.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&dragging.connect(&|_| {}).drag_handle_attrs(&key(2)))"
---
aria-grabbed=true
aria-label=Drag Apple
data-ars-part=drag-handle
data-ars-scope=tree-view
role=button
