crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_drop_indicator_after.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: snapshot_attrs(&attrs)
---
aria-hidden=true
data-ars-drop-position=after
data-ars-drop-target=tree-node-i-7
data-ars-part=drop-indicator
data-ars-scope=tree-view
