crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_leaf_has_children_flag.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(props().items(lazy)).connect(&|_|\n{}).leaf_attrs(&key(9)))"
---
aria-expanded=false
aria-level=1
aria-posinset=1
aria-selected=false
aria-setsize=1
data-ars-part=leaf
data-ars-scope=tree-view
id=tree-node-i-9
role=treeitem
