crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_leaf_text.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service(props()).connect(&|_| {}).leaf_text_attrs())"
---
data-ars-part=leaf-text
data-ars-scope=tree-view
