crates/ars-components/src/navigation/tree_view/snapshots/ars_components__navigation__tree_view__tests__tree_view_node_rename_input.snap
---
source: crates/ars-components/src/navigation/tree_view/tests.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).node_rename_input_attrs(&key(2)))"
---
aria-label=Rename Apple
data-ars-part=node-rename-input
data-ars-scope=tree-view
type=text
value=Apple
